//
//  TransactionTypes.swift
//  FinTrack
//
//  Created by Ihor Melashchenko on 12/4/21.
//

import Foundation

var transactionCategories: [String] = ["Food", "Health", "Bills", "Transport", "Pets", "Gifts", "Delivery", "Eating out", "Sports", "Entertainment", "Taxi", "Clothes"]
